# Grabadora_intento3

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Feria.md  README.md  TODO.md  alembic.ini  docker-compose.yml  doctor.py  ejecutar.md  ejecutar.py  errors.md  explicacion.md  informacion.md  init_db.py  pyproject.toml  requirements.txt  routes.md  sitecustomize.py
.github/workflows/: docker.yml  lint-and-test.yml  lint-test.yml
alembic/: env.py
alembic/versions/: 20240605_01_init.py  20240605_02_transcripts.py  20240605_03_transcript_notes.py
app/: __init__.py  auth.py  compat.py  config.py  database.py  main.py  models.py  schemas.py  whisper_service.py
app/infra/: redis_conn.py
app/routers/: auth.py  payments.py  stream.py  transcriptions.py
app/utils/: debug.py  jwt.py  notes.py  payments.py  storage.py
branding/: style-guide.md
deploy/: prometheus.yml
deploy/grafana/: README.md
deploy/grafana/dashboards/: api-overview.json
docs/: configuration.md  deployment.md
docs/marketing/: landing.md  value-proposition.md
frontend/: app.js  index.html  package-lock.json  package.json  student.css  student.html  student.js  styles.css  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/app/: App.tsx
frontend/src/app/components/: HeroBanner.tsx
frontend/src/app/layout/: AppShell.tsx  NavigationBar.tsx
frontend/src/components/: MessageBanner.tsx  SseViewer.tsx  Uploader.tsx
frontend/src/components/home/: HeroBanner.tsx
frontend/src/lib/: api.ts  auth.ts  hooks.ts
frontend/src/pages/: Biblioteca.tsx  Cuenta.tsx  Grabar.tsx  Transcribir.tsx
frontend/types/: node-url.d.ts  vite-client.d.ts
models/: user.py
queue/: tasks.py  worker.py
requirements/: base.txt  ci.txt  ml.txt
scripts/: benchmark_models.py  doctor.py  init_db.py  revisa_repo.py  seed_dev.py
services/: transcription.py
storage/: s3.py
taskqueue/: fallback.py  tasks.py  worker.py
tests/: test_api.py  test_auth.py  test_database.py  test_http_contract.py  test_inmemory_queue.py  test_queue.py  test_sse_stream.py  test_storage.py  test_transcription_service.py  test_whisper_service.py
(+9 files in other folders)
