[tool.poetry]
name = "grabadora-intento3"
version = "0.1.0"
description = "Streaming transcription platform"
authors = ["Grabadora Bot <bot@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.119.0"
starlette = "0.48.0"
uvicorn = {extras = ["standard"], version = "0.30.1"}
redis = "^5.0.4"
rq = "^1.16.2"
faster-whisper = "^0.10.0"
boto3 = "^1.34.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.9"
SQLAlchemy = "^2.0.29"
python-multipart = "0.0.20"
prometheus-client = "^0.20.0"
prometheus-fastapi-instrumentator = "^6.0.0"
pydantic = "2.12.0"
sse-starlette = "3.0.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
